add blob xhr background

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link rel="preload" href="./style/cards.css" as="style">
   <link rel="preload" href="./style/style.css" as="style">
   <link rel="preload" href="./style/min.css" as="style">
+  <link rel="preload" as="image" href="./images/fondos/vue.png">
+  <link rel="preload" as="image" href="./images/about.png">
 
   <link rel="stylesheet" type="text/css" href="./style/cards.css">
   <link rel="stylesheet" type="text/css" href="./style/style.css">
